cabal-version: 3.8

name: ricochet-robots
version: 0

executable ricochet-robots
  build-depends:
    base ^>= 4.18,
    containers ^>= 0.6.8 || ^>= 0.7,
    optics ^>= 0.4.2,
    reactive-banana ^>= 1.3.2,
    termbox-banana ^>= 1.0.0,
    vector,
  default-extensions:
    BlockArguments
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    OverloadedLabels
  default-language: GHC2021
  ghc-options: -Wall
  main-is: Main.hs
